--- a/pom.xml
+++ b/pom.xml
@@ -10,59 +10,12 @@
 
   <name>leetcode</name>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>11</maven.compiler.source>
-    <maven.compiler.target>11</maven.compiler.target>
-    <kotlin.version>1.5.21</kotlin.version>
-  </properties>
-
-  <dependencies>
-    <dependency>
-      <groupId>org.projectlombok</groupId>
-      <artifactId>lombok</artifactId>
-      <version>1.18.20</version>
-    </dependency>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.13.1</version>
-    </dependency>
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-api</artifactId>
-      <version>1.7.30</version>
-    </dependency>
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-simple</artifactId>
-      <version>1.7.30</version>
-    </dependency>
-    <dependency>
-      <groupId>org.jetbrains.kotlin</groupId>
-      <artifactId>kotlin-stdlib-jdk8</artifactId>
-      <version>${kotlin.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.jetbrains.kotlin</groupId>
-      <artifactId>kotlin-test-junit</artifactId>
-      <version>${kotlin.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.jetbrains.kotlin</groupId>
-      <artifactId>kotlin-maven-plugin</artifactId>
-      <version>${kotlin.version}</version>
-      <scope>provided</scope>
-    </dependency>
-  </dependencies>
-
   <build>
     <plugins>
       <plugin>
         <groupId>org.projectlombok</groupId>
         <artifactId>lombok-maven-plugin</artifactId>
-        <version>1.18.20.0</version>
+        <version>${lombok-plugin.version}</version>
         <executions>
           <execution>
             <phase>generate-sources</phase>
@@ -99,6 +52,10 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>11</source>
+          <target>11</target>
+        </configuration>
         <executions>
           <execution>
             <id>compile</id>
@@ -115,11 +72,82 @@
             </goals>
           </execution>
         </executions>
+        <version>3.9.0</version>
+      </plugin>
+      <plugin>
+        <artifactId>maven-site-plugin</artifactId>
         <configuration>
-          <source>11</source>
-          <target>11</target>
+          <moduleExcludes>
+            <fml>*.fml</fml>
+          </moduleExcludes>
         </configuration>
+        <groupId>org.apache.maven.plugins</groupId>
+        <version>3.10.0</version>
       </plugin>
     </plugins>
   </build>
+
+  <dependencies>
+    <dependency>
+      <artifactId>lombok</artifactId>
+      <groupId>org.projectlombok</groupId>
+      <version>1.18.22</version>
+    </dependency>
+    <dependency>
+      <artifactId>junit</artifactId>
+      <groupId>junit</groupId>
+      <version>4.13.2</version>
+    </dependency>
+    <dependency>
+      <artifactId>slf4j-api</artifactId>
+      <groupId>org.slf4j</groupId>
+      <version>1.7.35</version>
+    </dependency>
+    <dependency>
+      <artifactId>slf4j-simple</artifactId>
+      <groupId>org.slf4j</groupId>
+      <version>1.7.35</version>
+    </dependency>
+    <dependency>
+      <artifactId>kotlin-stdlib-jdk8</artifactId>
+      <groupId>org.jetbrains.kotlin</groupId>
+      <version>${kotlin.version}</version>
+    </dependency>
+    <dependency>
+      <artifactId>kotlin-test-junit</artifactId>
+      <groupId>org.jetbrains.kotlin</groupId>
+      <scope>test</scope>
+      <version>${kotlin.version}</version>
+    </dependency>
+    <dependency>
+      <artifactId>kotlin-maven-plugin</artifactId>
+      <groupId>org.jetbrains.kotlin</groupId>
+      <scope>provided</scope>
+      <version>${kotlin.version}</version>
+    </dependency>
+    <dependency>
+      <artifactId>lombok-maven-plugin</artifactId>
+      <groupId>org.projectlombok</groupId>
+      <scope>provided</scope>
+      <version>${lombok-plugin.version}</version>
+    </dependency>
+    <dependency>
+      <artifactId>maven-compiler-plugin</artifactId>
+      <groupId>org.apache.maven.plugins</groupId>
+      <version>3.9.0</version>
+    </dependency>
+    <dependency>
+      <artifactId>maven-site-plugin</artifactId>
+      <groupId>org.apache.maven.plugins</groupId>
+      <version>3.10.0</version>
+    </dependency>
+  </dependencies>
+
+  <properties>
+    <kotlin.version>1.6.0</kotlin.version>
+    <lombok-plugin.version>1.18.20.0</lombok-plugin.version>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
 </project>
